--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
@@ -50,6 +50,24 @@
 /* Style the tab content */
 .tabcontent {
   padding: 6px 12px;
-  border: 1px solid #1900ff;
   border-top: none;
+}
+
+/*layout avaliações*/
+
+.avaliacao {
+  margin-top: 20px;
+}
+
+.avaliacao h4 {
+  margin-bottom: 10px;
+}
+
+.opcoes {
+  display: flex;
+  flex-direction: column;
+}
+
+.opcoes input {
+  margin-bottom: 5px;
 }
