--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -11,7 +11,7 @@
     <h3>Satisfação no Trabalho</h3>
     <p>Avalia a satisfação dos colaboradores no ambiente profissional, focando em aspectos como gestão interna,
       benefícios, cultura organizacional e oportunidades de crescimento.</p>
-    
+
       <div class="avaliacao">
         <h4>Gestão Interna</h4>
         <p>Como você avalia a gestão interna da empresa?</p>
@@ -31,22 +31,25 @@
           <input type="radio" id="gi5" name="gi" value="5">
           <label for="gi5">Concordo totalmente</label>
         </div>
+      </div>
+
   </div>
 
   <div id="SP" class="tabcontent" [hidden]="!openSP">
     <h3>Satisfação Pessoal</h3>
-    <p>Explora aspectos a respeito da qualidade de vida pessoal que podem influenciar o equilíbrio trabalho-vida, como saúde, autocuidado, relacionamentos no ambiente doméstico, tempo de descanso e atividades de lazer.</p>
+    <p>Explora aspectos a respeito da qualidade de vida pessoal que podem influenciar o equilíbrio trabalho-vida, como
+      saúde, autocuidado, relacionamentos no ambiente doméstico, tempo de descanso e atividades de lazer.</p>
+
+
   </div>
 
   <div id="RI" class="tabcontent" [hidden]="!openRI">
     <h3>Relações Interpessoais</h3>
-    <p>Avalia a qualidade das relações no trabalho e na vida pessoal, com foco em comunicação, colaboração e suporte social.</p>
-  </div>
-<!-- LEMBRETE: Colocar em métodos-->
+    <p>Avalia a qualidade das relações no trabalho e na vida pessoal, com foco em comunicação, colaboração e suporte
+      social.</p>
+
 
   </div>
+  <!-- LEMBRETE: Colocar em métodos-->
 
 </div>
-
-
-
