alterado padding da tabela de testes

--- a/frontend/src/app/components/pages/colaboradores/colaboradores.component.html
+++ b/frontend/src/app/components/pages/colaboradores/colaboradores.component.html
@@ -15,7 +15,7 @@
               <tr>
                 <th class="titulos">Usuários</th>
                 <th>
-                  <input type="text" placeholder="Pesquisar Colaborador">
+                  <input type="text" class="search-colab" placeholder="Pesquisar Colaborador">
                 </th>
                 <th>
                   <input type="button"  name="Adicionar-colaborador" value="Adicionar Colaborador" class="botao-addcolab">
@@ -26,7 +26,7 @@
               <tr>
                 <td>{{ colaborador.nome }}</td>
                 <td></td>
-                <td>Ver Editar Excluir</td>
+                <td class="links">Ver Editar Excluir</td>
               </tr>
             </tbody>
           </table>
