--- a/frontend/src/app/components/pages/colaboradores/colaboradores.component.css
+++ b/frontend/src/app/components/pages/colaboradores/colaboradores.component.css
@@ -26,6 +26,11 @@ body {
     padding: 10px;
 }
 
+.search-colab {
+  border-radius: 10px;
+  padding: 9px;
+}
+
 .custom-table {
     width: 100%;
     border-collapse: collapse;
