--- a/frontend/src/app/components/pages/colaboradores/colaboradores.component.css
+++ b/frontend/src/app/components/pages/colaboradores/colaboradores.component.css
@@ -31,6 +31,12 @@ body {
   padding: 9px;
 }
 
+.links {
+  display: table-row;
+  align-items: center;
+  text-align: center;
+}
+
 .custom-table {
     width: 100%;
     border-collapse: collapse;
