--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
@@ -1,4 +1,14 @@
+<div class="block">
+  <h3 class="h">• Metas •</h3> <!--TÍTULO-->
 
+
+</div>
+
+<div class="block">
+  <h3 class="h">• Estatísticas •</h3> <!--TÍTULO-->
+
+
+</div>
 <!--
 
 <!doctype html>
