--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
@@ -1,57 +1,18 @@
-
-
-/* - - - 2.1 CHART - - - */
-
-.grafico-mensal {
+/* Bloco da tab contendo os gráficos */
+.block{ 
     display: block;
-    z-index: -10 !important;
-}
-
-/* - - - 2.2 GOALS - - - */
-
-.goal-1-b {
-    background-color: aliceblue
-
-}
-
-.goal-1 {
-    background-color: #f1e730;
-
-}
-
-.goal-2 {
-    background-color: #fff;
-
-}
-
-.goal-3 {
-    background-color: #fff;
-
-}
-
-
-
-
- /* - - - 2.1 CHART - - - */
-
-    /* - - - 2.2 GOALS - - - */
-
-    .goal-1-b {
-        background-color: #c2eff1;
-
-    }
-
-    .goal-1 {
-        background-color: #f1e730;
-
-    }
-
-    .goal-2 {
-        background-color: #fff;
-
-    }
-
-    .goal-3 {
-        background-color: #fff;
-
-    }
+    background-color: #F6F8F8;
+    margin-top: 4vh;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90vw;
+    height: 90vh;
+  }
+  
+  .h{
+    padding-left: 1vw;
+    display: flex;
+    background-image: linear-gradient(to right, #185376 , #5C93AD);
+    position: sticky;
+    color: #F6F8F8;
+  }
