--- a/frontend/src/app/components/footer/footer.component.css
+++ b/frontend/src/app/components/footer/footer.component.css
@@ -1,18 +1,18 @@
 footer {
-    position: absolute;
-    border-top: 1px solid #185376;
+    
+    background-color: #185376;
+    position: fixed;
+    bottom: 0;
+    height: 12vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 90px;
-    width: 100%;
-    background-color: #185376;
     color: white;
-    bottom: 0;
-
 
     p {
         padding: 5px;
-    }
+    }    
 }
+
