--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
@@ -1,12 +1,23 @@
 <div class="block">
+
   <h3 class="h">• Metas •</h3> <!--TÍTULO-->
 
+  <div class="card">
+    <h4>Preenchimento Atual</h4>
+    <div class="numero-preenchimentos">152/200</div>
+  </div>
 
 </div>
 
+
 <div class="block">
+
   <h3 class="h">• Estatísticas •</h3> <!--TÍTULO-->
 
+  <div class="card">
+    <h4>Preenchimento Atual</h4>
+    <div class="numero-preenchimentos">152/200</div>
+  </div>
 
 </div>
 
