--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.html
@@ -1,20 +1,24 @@
-<div class="block">
+<div class="container">
 
-  <h3 class="h">• Metas •</h3> <!--TÍTULO-->
-    <div *ngFor="let card of cardData" class="card">
-    <h2><!--Preenchimento Atual-->{{card.title}}</h2>
-    <div class="numero-preenchimentos"><!--152/200-->{{ card.numeroPreenchimentos }}</div>
+  <h3 class="h">• Metas •</h3>
+  <div *ngFor="let card of cardMetas" class="card">
+    <div class="title">
+      <h2><!--Preenchimento Atual-->{{card.title}}</h2>
+    </div>
+    <div class="cardMetas"><!--152/200-->{{ card.numeroPreenchimentos }}</div>
   </div>
 
 </div>
 
 
-<div class="block">
+<div class="container">
 
-  <h3 class="h">• Estatísticas •</h3> <!--TÍTULO-->
-  <div class="card">
-    <h2>Satisfação Geral</h2>
-    <div class="numero-preenchimentos">152/200</div>
+  <h3 class="h">• Estatísticas •</h3>
+  <div *ngFor="let card of cardChart" class="card">
+    <div class="title">
+      <h2><!--Satisfação Geral-->{{card.title2}}</h2>
+    </div>
+    <div class="cardChart"><!--gráfico1-->{{ card.chart }}</div>
   </div>
 
 </div>
