--- a/frontend/src/app/components/pages/colaboradores/colaboradores.component.html
+++ b/frontend/src/app/components/pages/colaboradores/colaboradores.component.html
@@ -25,7 +25,8 @@
                 type="button"
                 name="Adicionar-colaborador"
                 value="Adicionar Colaborador"
-                class="botao-addcolab"
+                class="botao-addcolab "
+                [routerLink]="['/cadastroColaborador']"
               />
             </th>
           </tr>
