--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
@@ -1,58 +1,58 @@
 /* Bloco da tab contendo os gráficos */
+.background{
+  background-image: url('https://images.pexels.com/photos/4623463/pexels-photo-4623463.jpeg');
+  /* https://images.pexels.com/photos/7793699/pexels-photo-7793699.jpeg
+  https://images.pexels.com/photos/1595385/pexels-photo-1595385.jpeg 
+  https://images.pexels.com/photos/4623463/pexels-photo-4623463.jpeg*/
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 .container {
-  display: block;
-  margin-top: 4vh;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 93vw;
-  height: 90vh;
+  position: relative;
+  text-align: center;
+  height: 51vh; width: 93vw;
+  left: 50%; transform: translate(-50%, 5%);
+  margin-bottom: 3%;
   background-color: #F6F8F8D9;
 }
 
 .h {
-  padding-top: 0.3em;
+  padding-top: 0.3em; padding-left: 1vw;
+  text-align: start;
   height: 1.7em;
-  padding-left: 1vw;
   color: #F6F8F8;
   background-image: linear-gradient(to right, #185376, #5C93AD);
 }
 
 
+.card {
+  display: inline-block;
+  height: 39vh; width: 29vw;
+  margin-top: 2%; margin-inline: 1%;
+  background: white;
+  border-bottom-right-radius: 0.8em;
+  border-bottom-left-radius: 0.8em;
+}
+
+
 .title {
+  font-size: 2.6vh;
   font-weight: normal;
-  position: relative;
-  bottom: 1em;
-  right: 1em;
-  height: 3vh;
-  width: 29vw;
   text-align: left;
-  padding-top: 0.2em;
+  height: 3.5vh; width: 29vw;
+  padding-top: 0.1em;
   padding-left: 1em;
   color: #F6F8F8;
   background-image: linear-gradient(to right, #185376, #5C93AD, #e5f3f3);
 
 }
 
-.card {
-  display: inline-block;
-  text-align: center;
-  margin-inline-start: 1.8em;
-  margin-top: 0.8em;
-  height: 39vh;
-  width: 29vw;
-  padding: 20px;
-  background: white;
-  border-bottom-right-radius: 0.8em;
-  border-bottom-left-radius: 0.8em;
-}
-
-.cardChart{
-  margin: auto;
+.cardChart {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
-  height: 10em;
-  width: 10em;
+  height: 10vh; width: 10vw;
   background: #e7dc76;
 }
-
