Criando service para empresa

--- a/frontend/src/app/components/pages/perfil/perfil.component.html
+++ b/frontend/src/app/components/pages/perfil/perfil.component.html
@@ -18,8 +18,8 @@
                 <input type="text" class="label-name" name="endereco" id="endereco" formControlName="endereco" required>
             </div>
             <div class="container-info">
-                <label for="empresa">Empresa</label>
-                <input type="text" class="label-name" name="empresa" id="empresa" formControlName="empresa" required>
+                <label for="empresaNome">Empresa</label>
+                <input type="text" class="label-name" name="empresaNome" id="empresaNome" formControlName="empresaNome" required>
             </div>
             <div class="container-info">
                 <label for="funcao">Função</label>
