--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -9,3 +9,6 @@ a {
     text-decoration: none;
     transition: .4s;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
