--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,5 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 * {
     padding: 0;
     margin: 0;
@@ -10,5 +12,12 @@ a {
     transition: .4s;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
