Inserindo bootstrap na página de perfil

--- a/frontend/src/app/components/utils/dropdown/usuario-dropdown.component.html
+++ b/frontend/src/app/components/utils/dropdown/usuario-dropdown.component.html
@@ -1,5 +1,5 @@
 <div ngbDropdown>
-    <img src="../../../../assets/images/user-icon.png" alt="Usuário" id="user-icon" ngbDropdownToggle>
+    <img src="../../../../assets/images/user.png" alt="Usuário" id="user-icon" ngbDropdownToggle>
     <div ngbDropdownMenu>
         <button ngbDropdownItem (click)="navigateTo('/login')">Login</button>
         <button ngbDropdownItem (click)="navigateTo('/perfil')">Meu Perfil</button>
