--- a/frontend/src/app/components/pages/perfil/perfil.component.css
+++ b/frontend/src/app/components/pages/perfil/perfil.component.css
@@ -1,158 +1,54 @@
-@media (max-width: 3000px) {
-  .user-page {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: flex-start;
-    align-items: flex-start;
-    background-color: aliceblue;
-    min-height: 75vh;
-    font-family: 'Courier New', Courier, monospace;
-  }
+.user-info {
+  width: 100px;
+  margin: 50px;
 
-  .user-info {
+  img {
     width: 100px;
-    margin: 50px;
-
-    img {
-      width: 100px;
-      border-radius: 90px;
-      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
-
-    p {
-      text-align: center;
-    }
+    border-radius: 90px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   }
 
-  .info-grid {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    h2 {
-      margin-top: 30px;
-      margin-left: 30px;
-    }
-
-    form {
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-  }
-
-  .container-info {
-    display: flex;
-    flex-direction: column;
-    background: white;
-    padding: 10px;
-    margin: 20px;
-    border: 1px solid rgb(193, 215, 228);
-    border-radius: 3px;
-    flex-basis: 30%;
-
-    label {
-      font-size: 13px;
-      font-weight: 100;
-    }
-
-    input {
-      outline: none;
-    }
-
-    .label-name {
-      margin-top: 5px;
-      border: 0px transparent;
-      border-radius: 3px;
-      padding: 5px;
-    }
-  }
-
-  .button-user {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  #button-save {
-    display: flex;
-    padding: 10px;
-    color: rgb(255, 255, 255);
-    background: #064469;
-    border-radius: 8px;
-    border-style: none;
-    box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 100%;
-    line-height: 1.15;
-    margin: 0;
-    padding: 10px 21px;
-  }
-
-  #button-save:hover {
-    background-color: #072D44;
+  p {
+    text-align: center;
   }
 }
 
-@media (max-width: 430px) {
-  .user-page {
-    background-color: aliceblue;
-    display: flex;
-    height: 500px;
+.container-info {
+  display: flex;
+  flex-direction: column;
+  background: white;
+  padding: 10px;
+  margin: 20px;
+  border: 1px solid rgb(193, 215, 228);
+  border-radius: 3px;
+  flex-basis: 30%;
+
+  label {
+    font-size: 13px;
+    font-weight: 100;
+    text-align: left;
   }
 
-  .user-info {
-    width: 80px;
-    margin: 50px;
-
-    img {
-      width: 80px;
-      align-items: center;
-      border-radius: 90px;
-      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 15px;
-    }
+  input {
+    outline: none;
   }
 
-  .user-data {
-    width: 100px;
-    height: 300px;
-    flex-wrap: wrap;
-  }
-
-  .info-grid {
-    display: flex;
-    flex-direction: column;
-
-    h2 {
-      margin-top: 30px;
-      margin-left: 30px;
-      margin-bottom: 0px;
-      width: 430px;
-    }
-  }
-
-  .button-user {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-
-  #button-save {
+  .label-name {
+    margin-top: 5px;
+    border: 0px transparent;
+    border-radius: 3px;
     padding: 5px;
-    margin-top: 15px;
-    margin-left: 20px;
-    color: rgb(255, 255, 255);
-    background: #666;
-    border-radius: 2px;
-    border: 1px solid rgb(193, 215, 228);
   }
+}
+
+.button-save {
+  transition: 0.5s;
+  background-color: #185376;
+  border-color: #185376;
+}
+
+.button-save:hover {
+  transition: 0.5s;
+  background-color: #214153;
+  border-color: #214153;
 }
