--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
-    <p>Compartilhe seus melhores momentos</p>
-    <p><b>Mind+ &copy;2024</b></p>
+    <div>Compartilhe seus melhores momentos</div>
+    <div><b>Mind+ &copy;2024</b></div>
 </footer>
