--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,13 +1,27 @@
-<nav>
-  <a class="logo" routerLink="/">
-    <img src="../../../assets/images/logo-sem-escrita.png" alt="Logo" />
-    <h2>Mind+</h2>
-  </a>
-  <ul class="links">
-    <li><a routerLink="/admin">AvaliaçõesADM</a></li>
-    <li><a routerLink="/colaborador">AvaliaçõesCOLAB</a></li>
-    <li><a routerLink="/colaboradores">Colaboradores</a></li>
-    <li><a routerLink="/agendamento">Agendamento</a></li>
-    <li><app-dropdown></app-dropdown></li>
-  </ul>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">
+      <img src="../../../assets/images/logo.png" id="logo" alt="Logo MindPlus">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/admin">Avaliações ADM</a></li>
+        <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/colaborador">Avaliações COLAB</a></li>
+        <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/colaboradores">Colaboradores</a></li>
+        <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/agendamento">Agendamento</a></li>
+        <li class="nav-item dropdown">
+          <a type="button" class="nav-link" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="../../../assets/images/user.png" id="user-icon" alt="Opções do Usuário">
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/login">Login</a></li>
+            <li><a class="dropdown-item" routerLink="/perfil">Meu Perfil</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
