Finalizando responsividade da header

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="!isLoginPage(); else loginPage">
   <app-header></app-header>
-  <main class="container">
+  <main class="container-fluid">
     <router-outlet></router-outlet>
   </main>
   <app-footer></app-footer>
