--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/admin">Avaliações ADM</a></li>
         <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/colaborador">Avaliações COLAB</a></li>
@@ -16,9 +16,9 @@
           <a type="button" class="nav-link" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="../../../assets/images/user.png" id="user-icon" alt="Opções do Usuário">
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/login">Login</a></li>
-            <li><a class="dropdown-item" routerLink="/perfil">Meu Perfil</a></li>
+          <ul class="dropdown-menu top-100 end-0 menu-usuario">
+            <li><a class="dropdown-item menu-usuario-item" routerLink="/login">Login</a></li>
+            <li><a class="dropdown-item menu-usuario-item" routerLink="/perfil">Meu Perfil</a></li>
           </ul>
         </li>
       </ul>
