Mudando cor do botão responsivo

--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -45,3 +45,7 @@ nav {
 .menu-usuario-item:hover {
     background-color: #185376;
 }
+
+.botao-menu-responsivo {
+    background-color: #4c9ac7;
+}
