background arrumado, margin da footer removido pois empurra elementos

--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="container-fluid">
     <div>Compartilhe seus melhores momentos</div>
     <div><b>Mind+ &copy;2024</b></div>
 </footer>
