--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,11 @@
 <ng-container *ngIf="!isLoginPage(); else loginPage">
+  <div class="container-app">
   <app-header></app-header>
-  <main class="container-fluid">
+  <main class="container-fluid flex-grow-1 main">
     <router-outlet></router-outlet>
   </main>
   <app-footer></app-footer>
+  </div>
 </ng-container>
 
 <ng-template #loginPage>
