--- a/frontend/src/app/components/footer/footer.component.css
+++ b/frontend/src/app/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer {
+    bottom: 0;
     width: 100%;
     height: 130px;
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
