--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
@@ -1,5 +1,5 @@
 /* Bloco da tab contendo os gráficos */
-.background{
+.imagem-fundo{
   background-image: url('https://images.pexels.com/photos/4623463/pexels-photo-4623463.jpeg');
   /* https://images.pexels.com/photos/7793699/pexels-photo-7793699.jpeg
   https://images.pexels.com/photos/1595385/pexels-photo-1595385.jpeg 
@@ -9,7 +9,7 @@
   background-attachment: fixed;
 }
 
-.container {
+.fundo {
   position: relative;
   text-align: center;
   height: 51vh; width: 93vw;
@@ -18,7 +18,7 @@
   background-color: #F6F8F8D9;
 }
 
-.h {
+.titulo1 {
   padding-top: 0.3em; padding-left: 1vw;
   text-align: start;
   height: 1.7em;
@@ -27,7 +27,7 @@
 }
 
 
-.card {
+.cartao {
   display: inline-block;
   height: 39vh; width: 29vw;
   margin-top: 2%; margin-inline: 1%;
@@ -37,7 +37,7 @@
 }
 
 
-.title {
+.titulo2 {
   font-size: 2.6vh;
   font-weight: normal;
   text-align: left;
@@ -49,7 +49,7 @@
 
 }
 
-.cardChart {
+.cartaoChart {
   display: flex;
   justify-content: center;
   align-items: center;
