--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -1,6 +1,6 @@
-<div class="background">
+<div class="imagem-fundo">
 
-  <div class="form">
+  <div class="formulario">
 
     <div class="tab">
       <h3 id="av">• Avaliação •</h3> <!--TÍTULO-->
@@ -37,22 +37,21 @@
 
     </div>
 
+
     <div id="SP" class="tabcontent" [hidden]="!openSP">
       <h3>Satisfação Pessoal</h3>
       <p>Explora aspectos a respeito da qualidade de vida pessoal que podem influenciar o equilíbrio trabalho-vida, como
         saúde, autocuidado, relacionamentos no ambiente doméstico, tempo de descanso e atividades de lazer.</p>
 
-
     </div>
+
 
     <div id="RI" class="tabcontent" [hidden]="!openRI">
       <h3>Relações Interpessoais</h3>
       <p>Avalia a qualidade das relações no trabalho e na vida pessoal, com foco em comunicação, colaboração e suporte
         social.</p>
 
-
     </div> <!-- LEMBRETE: Colocar em métodos-->
-
 
   </div>
 
