Alterações na organização de pastas do backend e ajustes na página de perfil

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -7,8 +7,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/admin">Avaliações ADM</a></li>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 .fs-5 fw-medium">
+        <li class="nav-item align-middle"><a class="nav-link" aria-current="page" routerLink="/admin">Avaliações ADM</a></li>
         <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/colaborador">Avaliações COLAB</a></li>
         <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/colaboradores">Colaboradores</a></li>
         <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/agendamento">Agendamento</a></li>
