--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
@@ -7,15 +7,41 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  padding-bottom: 3.5em;
 }
 
 .fundo {
   position: relative;
   text-align: center;
-  height: 51vh; width: 93vw;
+  width: 93vw;
   left: 50%; transform: translate(-50%, 5%);
-  margin-bottom: 3%;
   background-color: #F6F8F8D9;
+  padding-bottom: 1em;
+
+}
+
+.cartao {
+  display: inline-block;
+  height: 39vh; width: 29vw;
+  margin-top: 1.5%; margin-inline: 1%;
+  background: white;
+  border-bottom-right-radius: 0.8em;
+  border-bottom-left-radius: 0.8em;
+}
+
+
+@media (max-width: 55rem) { 
+  .fundo { 
+     flex-direction: column; 
+  } 
+  .cartao { 
+     flex: none; 
+     width: 100%; 
+     transform: translate(-1%, 5%);
+  }
+  .titulo2{
+    
+  }
 }
 
 .titulo1 {
@@ -26,22 +52,12 @@
   background-image: linear-gradient(to right, #185376, #5C93AD);
 }
 
-
-.cartao {
-  display: inline-block;
-  height: 39vh; width: 29vw;
-  margin-top: 2%; margin-inline: 1%;
-  background: white;
-  border-bottom-right-radius: 0.8em;
-  border-bottom-left-radius: 0.8em;
-}
-
-
 .titulo2 {
+  white-space: nowrap;
   font-size: 2.6vh;
   font-weight: normal;
   text-align: left;
-  height: 3.5vh; width: 29vw;
+  height: 3.5vh; min-width: 29vw; 
   padding-top: 0.1em;
   padding-left: 1em;
   color: #F6F8F8;
