--- a/frontend/src/app/components/pages/perfil/perfil.component.html
+++ b/frontend/src/app/components/pages/perfil/perfil.component.html
@@ -35,5 +35,16 @@
         <div>
             <button type="submit" class="btn btn-primary button-save">Salvar</button>
         </div>
+        <a class="btn text-white" style="background-color: #55acee;" href="#!" role="button" mdbRipple>
+            <i class="fab fa-twitter"></i>
+        </a>
     </form>
+    <div *ngIf="isResponseOk; else errorTemplate" class="alert alert-success fade-in-up mt-3" role="alert">
+        Seu perfil foi atualizado com sucesso!
+    </div>
+    <ng-template #errorTemplate>
+        <div *ngIf="isResponseError" class="alert alert-danger mt-3 fade-in-up" role="alert">
+            Algo deu errado! Não foi possível atualizar seus dados de perfil.
+        </div>
+    </ng-template>
 </div>
